plugins {
    id 'java'
    id 'me.champeau.jmh' version '0.7.2'
}

group = 'com.example'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    jmhImplementation 'org.openjdk.jmh:jmh-core:1.37'
    jmhAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
}

test {
    useJUnitPlatform()
    jvmArgs '--add-modules', 'jdk.incubator.vector'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
}

jmh {
    warmupIterations = 3
    iterations = 5
    fork = 1
    benchmarkMode = ['thrpt']
    timeUnit = 'ms'
    jvmArgs = ['--add-modules', 'jdk.incubator.vector']
}

